<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="146dp"
        android:layout_height="146dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_img"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:maxWidth="146dp"
        android:text="@string/judul"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tvHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="146dp"
        android:text="@string/sample_price"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/tvJudul" />

    <TextView
        android:id="@+id/tvStok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="146dp"
        android:text="@string/_30"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvHarga"
        app:layout_constraintTop_toBottomOf="@+id/tvHarga" />

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="146dp"
        android:text="@string/sample_brand"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvJudul"
        app:layout_constraintTop_toBottomOf="@+id/tvStok" />

</androidx.constraintlayout.widget.ConstraintLayout>