<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.user.product.electronics.ElectronicsProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Category"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/categoryLaptop"
                    android:background="@drawable/card_button"
                    android:padding="14dp"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_laptop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/laptop"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/categorySmartphone"
                    android:background="@drawable/card_button"
                    android:padding="14dp"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_smartphone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smartphone"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/categoryKeyboard"
                    android:background="@drawable/card_button"
                    android:padding="14dp"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_keyboard"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/categoryMouse"
                    android:background="@drawable/card_button"
                    android:padding="14dp"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:src="@drawable/ic_mouse"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mouse"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="Product"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_product"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:itemCount="10"
            tools:orientation="vertical"
            tools:scrollbars="vertical"
            tools:spanCount="2"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>